--- a/config.env
+++ b/config.env
@@ -25,8 +25,8 @@ USE_SERVICE_ACCOUNTS = "False" # True or False
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "120" # Enter only numbers in seconds
-BASE_URL = "http://127.0.0.1" # Enter server IP
-BASE_URL_PORT = "80" # Enter server port
+BASE_URL = "https://leechbot-tyovps0j.b4a.run" # Enter server IP
+BASE_URL_PORT = "8080" # Enter server port
 WEB_PINCODE = "True" # True or False
 
 # Rclone
