--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "" # Enter your telegram bot token
+BOT_TOKEN = "7255495378:AAHDVSC8dnZujLPOQAJeuvSfRmUoZelfiGc" # Enter your telegram bot token
 OWNER_ID = "" # Enter your telegram user id
 TELEGRAM_API = "" # Enter telegram API key
 TELEGRAM_HASH = "" # Enter telegram API hash
