--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     command: bash start.sh
     restart: on-failure
     ports:
-      - "80:80"
-      - "8080:8080"
-      - "8070:8070"
-      - "8090:8090"
+      EXPOSE "80"
+      EXPOSE "8080"
+      EXPOSE "8070"
+      EXPOSE "8090"
